# province

./: .gitignore  AGENT_INTEGRATION_SUMMARY.md  AGENT_TOOL_INTEGRATION_SUMMARY.md  AGENT_UPLOAD_TEST_SCRIPT.md  AI_FORM_FILLING_COMPLETE.md  AUTO_REFRESH_FIX_APPLIED.md  AUTO_REFRESH_FORM_1040.md  AUTO_REFRESH_IMPLEMENTATION.md  AWS_SETUP_GUIDE.md  BACKEND_CLEANUP_SUMMARY.md  BATTLE_TESTED_COMPLETE.md  BATTLE_TEST_SUCCESS.txt  BEDROCK_W2_PROCESSING_FIX.md  CLAUDE.md  COMPLETE_SYSTEM_READY.md  COMPREHENSIVE_BACKEND_CLEANUP_SUMMARY.md  COMPREHENSIVE_TAX_FLOW_TEST.md  CONVERSATIONAL_TAX_SYSTEM_SUMMARY.md  CONVERSATION_TEST_SCRIPT.md  CURRENT_STATUS.md  DEPLOYMENT_COMPLETE.md  DEVPOST.md  DRAG_DROP_CHAT_TEST.md  DRAG_DROP_UPLOAD_TEST.md  ENHANCED_AGENT_COMPLETE.md  FINAL_INTEGRATION_COMPLETE.md  FINAL_TAX_FLOW_FIXES.md  FORM_1040_VIEWER_FIX.md  FORM_FILLING_COMPLETE.md  FORM_FILLING_COMPLETE_SUMMARY.md  FORM_FILLING_E2E_SUCCESS.md  FORM_FILLING_FIXES.md  FORM_FILLING_PIPELINE_SUMMARY.md  FORM_MAPPING_AGENT_READY.md  FRONTEND_CHAT_TEST_SCRIPT.md  FRONTEND_TEST_INSTRUCTIONS.md  FRONTEND_TEST_SCRIPT.md  GENERALIZED_UPLOAD_TEST.md  INTELLIGENT_FORM_FILLING_COMPLETE.md  INVESTIGATION_COMPLETE.md  (+17 more)
backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  BEDROCK_PERMISSIONS_FIX.md  BEDROCK_SETUP_GUIDE.md  BEDROCK_W2_INTEGRATION_SUMMARY.md  CLEANUP_SUMMARY.md  COMPREHENSIVE_FILL_RESULTS.txt  DYNAMIC_FORM_FILLING_SUMMARY.md  Dockerfile  ENABLE_BEDROCK_MODELS.md  FINAL_SYSTEM_PROOF.py  IAM_ADMIN_POLICY.json  MULTI_DOCUMENT_INGESTION_SUMMARY.md  Makefile  QUICK_FIX.md  (+129 more)
(+428 files in other folders)
